# cogito-fun

./: .eslintrc.cjs  .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: build-server.js  watch-server.js
server/: index.ts  router.ts
src/: App.tsx  auth.tsx  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  main.json
src-tauri/lang/: de.json
src-tauri/scripts/: query_app_pid.sh
src-tauri/sqls/: create_permissions_table.sql  create_role_permissions_table.sql  create_roles_table.sql  create_user_roles_table.sql  create_user_table.sql  seed_sys.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/my_commands/: mod.rs
src-tauri/src/my_commands/file_commands/: mod.rs
src-tauri/src/my_commands/sys_commands/: axum_server.rs  mod.rs  system_info.rs
src/components/: Empty.tsx  temp.json
src/components/BreadcrumbsCogito/: constant.ts  (+1 more)
src/configs/: index.ts
src/constants/: component.ts  data.ts  index.ts
src/datasources/: index.ts
src/routes/: __root.tsx  ai.lazy.tsx  ai.tsx  data-center.lazy.tsx  data-center.tsx  datasource.lazy.tsx  datasource.tsx  datasrouce.sqlite.tsx  editor.tsx  index.lazy.tsx  index.tsx  login-register.lazy.tsx  login.tsx  monitor.tsx  sandpack.lazy.tsx  sandpack.tsx  settings.tsx  tools.tsx  window.dataformview.tsx  window.jsonactioneditor.tsx
src/store/: useConfig.ts  useFile.ts  useGraph.ts  useJson.ts  useModal.ts  userInfoAtom.ts
src/types/: global.d.ts  styled.d.ts
src/utils/: toaster.tsx  trpc.ts
(+124 files in other folders)
