[package]
name = "cogito-tech"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cogito_tech_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["unstable"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.0.0-beta.6"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-os = "2.0.0-beta.4"
tauri-plugin-http = "2.0.0-beta.7"
tauri-plugin-websocket = "2.0.0-beta.5"
tauri-plugin-log = "2.0.0-beta.4"
axum = "0.7.5"
local-ip-address = "0.6.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
sysinfo = "0.30.12"


[dependencies.tauri-plugin-sql]
features = ["sqlite"]  # or "postgres", or "mysql"
version = "2.0.0-beta"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.4"
